--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "moment": "^2.29.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "webtorrent": "^0.118.0"
+    "url-loader": "^4.1.1",
+    "webtorrent": "^1.5.5"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
