--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
     "moment": "^2.29.1",
-    "next": "10.2.0",
+    "next": "^11.1.3-canary.16",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "url-loader": "^4.1.1",
